@@ -1390,8 +1390,7 @@ getAuthCookie(struct http_auth *hauth, char *auth_header,
 				 auth_header_len);
 
 	if (!a_found &&
-	    find_auth_user_passwd(pu->host, pu->port, pu->file, realm,
-				  &uname, &pwd, proxy)) {
+	    find_auth_user_passwd(pu, realm, &uname, &pwd, proxy)) {
 	    /* found username & password in passwd file */ ;
 	}
 	else {
